[package]
name = "valid_selectors"
version = "0.1.0"
edition = "2021"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test_cases.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
quote = "1.0.14"
syn = "1.0.84"
libxml = { git = "https://github.com/bcpeinhardt/rust-libxml.git", branch = "compile_xpath_context_free" }
